chore: update ci

--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -9,6 +9,6 @@ on:
 
 jobs:
   check:
-    uses: filecoin-project/venus/.github/workflows/common_go.yml@master
+    uses: filecoin-project/venus/.github/workflows/common_go.yml@chore/update-go
     with:
       has_ffi: true
