--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -19,6 +19,10 @@ jobs:
           go-version: '1.21'
           cache: true
 
+      - name: show vars
+        run: |
+          echo vars.repo_name = ${{secrets.CODECOV_TOKEN}}
+
       - name: install default deps
         run: sudo apt-get -o Acquire::Retries=3 update && sudo apt-get -o Acquire::Retries=3 install hwloc libhwloc-dev mesa-opencl-icd ocl-icd-opencl-dev -y
 
@@ -41,7 +45,7 @@ jobs:
         run: |
           go test -coverpkg=./... -race -coverprofile=coverage.txt -covermode=atomic ./... -v --timeout 10m
       - name: Upload
-        uses: codecov/codecov-action@v2
+        uses: codecov/codecov-action@v3
         with:
           token: ${{ secrets.CODECOV_TOKEN }}
           files: ./coverage.txt
